Fix visibility and pointer events for improved modal accessibility

--- a/css/style.css
+++ b/css/style.css
@@ -523,9 +523,9 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* visibility: hidden;
+    visibility: hidden;
     opacity: 0;
-    pointer-events: none;  */
+    pointer-events: none;  
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
